@@ -1,3 +1,5 @@
+# frozen-string-literal: true
+
 require 'thamble'
 require 'active_support/core_ext/string/output_safety'
 ActiveSupport::SafeBuffer.send(:include, Thamble::Raw)
